<resources>
    <string name="app_name">Key controlling system</string>
    <string name="add_peuple">Добавить человека</string>
    <string name="give_key">Выдать ключ</string>
    <string name="put_key">Вернуть ключ</string>
    <string name="fio">Введите фамилию, имя и отчество</string>
    <string name="fio_placeholder">ФИО</string>
    <string name="add">Добавить</string>
    <string name="cabinet">Кабинет</string>
    <string name="whom">Кому</string>
    <string name="give">Выдать</string>
    <string name="create_cabinet">Добавить кабинет</string>
    <string name="return_key_btn_text">Вернуть ключ</string>
    <string name="return_key_text">Выберите ключ для возврата</string>
    <string name="export_to_csv">Экспортировать в CSV</string>
    <string name="remove_from_base">Удалить из базы</string>
    <string name="remove_people">Удалить человека</string>
    <string name="remove_cabinet">Удалить кабинет</string>
</resources>